--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,9 @@
     "highcharts": "^11.1.0",
     "highcharts-react-official": "^3.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
